--- a/pom.xml
+++ b/pom.xml
@@ -62,7 +62,11 @@
             <artifactId>spring-context-support</artifactId>
             <version>4.3.3.RELEASE</version>
         </dependency>
-
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-test</artifactId>
+			<scope>test</scope>
+		</dependency>
     </dependencies>
 
 	<build>
