--- a/src/main/resources/config/application-batch.properties
+++ b/src/main/resources/config/application-batch.properties
@@ -3,8 +3,12 @@
 #
 #This file is included when the 'batch' Spring profile is active
 ##
-
+spring.profiles.active=batch
 
 ##
 # Greeting Scheduled Processo configuration
 ##
+batch.greeting.fixedrate=15000
+batch.greeting.fixeddelay=15000
+batch.greeting.initialdelay=5000
+batch.greeting.cron=0,30 * * * * *
