--- a/src/main/resources/config/application.properties
+++ b/src/main/resources/config/application.properties
@@ -19,3 +19,27 @@ spring.jpa.hibernate.ddl-auto=validate
 #   Initialization
 spring.datasource.schema=classpath:/data/hsqldb/schema.sql
 spring.datasource.data=classpath:/data/hsqldb/data.sql
+
+##
+#   Actuator Configuration
+##
+endpoints.health.id=status
+endpoints.health.sensitive=false
+endpoints.shutdown.enabled=true
+endpoints.shutdown.sensitive=false
+
+management.context-path=/actuators
+
+# management.security.role=SYSADMIN
+
+info.app.name=Web Services
+info.app.description=A RESTfull web services project using Spring Boot.
+info.build.group=@project.groupId@
+info.build.artifact=@project.artifactId@
+info.build.version=@project.version@
+
+##
+#  Spring Security Configuration
+##
+security.user.name=jd
+security.user.password=jd
